# StreamFusion

./: .dockerignore  CLAUDE.md  pom.xml  readme.md
.claude/: claude.md
.claude/research/: flink-arroyo-accelerator-findings.md  fluss-native-source-findings.md  fluss-source-profile-2026-07.md  nexmark-operator-profiles-2026-07.md
.claude/todos/: 00-roadmap.md  01-mailbox-threading.md  02-two-phase-window-aggregation.md  03-avg-and-general-accumulator-state.md  04-wider-input-schemas.md  05-memory-accounting.md  06-changelog-retract-support.md  07-parity-test-harness.md  08-route-filter-to-sql.md  09-acceleration-policy-keep-chains.md  10-native-columnar-shuffle.md  11-arroyo-operator-coverage.md  13-two-phase-hopping-slices.md  14-session-windows.md  16-multiple-grouping-keys.md  17-string-grouping-keys.md  18-filter-routing.md  19-expression-layer.md  20-profiling-and-benchmarks.md  21-native-operator-chaining.md  22-parquet-sink-file-coalescing.md  24-columnar-endpoints-beyond-local-parquet.md  25-parquet-source-timestamp-timezone.md  26-keyed-event-time-operators.md  27-two-input-columnar-join.md  28-native-row-transpose-and-shuffle.md  29-fallback-reasons-in-explain.md  30-nexmark-benchmark.md  31-columnar-changelog-operators.md  32-native-decode-to-arrow-at-ingest.md  33-native-kafka-source.md  34-columnar-sinks-and-nested-boundary-types.md  34-shared-ffi-allocator.md  35-join-breadth-outer-semi-anti-nonequi.md  36-fully-columnar-native-islands.md  36-nexmark-fluss-source.md  37-disaggregated-state-store.md  38-udf-serialization-distributed.md  39-nexmark-q6-exclusion.md  39-nexmark-q6-q13-exclusions.md  (+11 more)
.claude/wontdos/: 48-updating-join-block-state.md  51-paned-hop-aggregation.md  52-distinct-split-chain.md
.github/workflows/: ci.yml
divergences/: 01-integer-truncating-avg.md  02-two-phase-local-global-aggregation.md  03-incremental-window-merge.md  04-synchronous-stateful-execution.md  05-cumulative-windows.md  06-two-phase-slice-sharing.md  07-expression-encoding-and-compile-once.md  08-columnar-flow-transitions.md  08-fused-native-subtree.md  09-per-batch-watermark-assignment.md  10-columnar-exchange-own-hash.md  11-over-incremental-vs-window-exec.md  12-joins-delegate-match-own-state.md  13-rowkind-carriage-meta-column.md  14-standalone-streaming-engines.md  15-unnest-take-fanout-not-datafusion-unnestexec.md  16-upfront-managed-memory-reservation.md  18-simd-json-decode.md  19-kafka-consume-fast-path.md  20-minibatch-netdiff-topn.md  21-ingest-text-envelope.md  22-parquet-sink-encoding-only-native.md  23-flink-planner-loader-shadow.md  24-connector-native-extension-libraries.md  25-flink-format-provider-artifacts.md  README.md
docker/: flink-base.Dockerfile  native-release.Dockerfile
docs/: aggregate-type-support.md  benchmarks.md  coverage-and-fallbacks.md  optimizations.md  temporal-join-plan.md
native/: Cargo.toml  build.rs
native/benches/: operators.rs
native/src/: aggregates.rs  bench.rs  bridge.rs  calc.rs  changelog.rs  dedup.rs  exchange.rs  expr.rs  files.rs  flatten.rs  flink_key.rs  fluss.rs  formats.rs  group_agg.rs  interval_join.rs  ipc.rs  join_common.rs  json.rs  kafka.rs  keys.rs  lib.rs  memory.rs  normalizer.rs  over_agg.rs  rowtime.rs  session_agg.rs  sorter.rs  temporal_join.rs  tests.rs  topn.rs  updating_join.rs  window_agg.rs  window_join.rs
orc-baseline/: pom.xml
src/main/java/io/github/jordepic/streamfusion/: Native.java  NativeExtensionLoader.java  NativeMemoryLimitException.java
src/main/java/io/github/jordepic/streamfusion/arrow/: ArrowConversion.java  ArrowReader.java  ArrowWriter.java  package-info.java
src/main/java/io/github/jordepic/streamfusion/fluss/: FlussConfigTranslator.java  FlussSplitTranslator.java  NativeFluss.java  NativeFlussFetcherManager.java  NativeFlussLogSplit.java  NativeFlussRecord.java  NativeFlussRecordEmitter.java  NativeFlussSource.java  NativeFlussSourceReader.java  NativeFlussSplitReader.java
src/main/java/io/github/jordepic/streamfusion/format/: NativeFormatContext.java  NativeFormatOptions.java  NativeFormatProvider.java  NativeFormatProviders.java  (+3 more)
src/test/java/io/github/jordepic/streamfusion/: ArrowBridgeTest.java  BatchBridgeTest.java  CountingBlackholeTableFactory.java  FlinkAsyncLookupJoinSqlHarnessTest.java  FlinkBinaryRowHashParityTest.java  FlinkCalcSqlHarnessTest.java  FlinkChangelogNormalizeSqlHarnessTest.java  FlinkColumnarGroupAggregateSqlHarnessTest.java  FlinkColumnarShuffleParallelismTest.java  FlinkColumnarWindowSqlHarnessTest.java  FlinkComplexTypeSqlHarnessTest.java  FlinkCountDistinctSqlHarnessTest.java  FlinkDateFormatSqlHarnessTest.java  FlinkDecimalAggregateSqlHarnessTest.java  FlinkDecimalExprSqlHarnessTest.java  FlinkDeduplicateSqlHarnessTest.java  FlinkExpandSqlHarnessTest.java  FlinkExtractSqlHarnessTest.java  FlinkFieldAccessSqlHarnessTest.java  FlinkFilterSqlHarnessTest.java  FlinkGroupAggregateSqlHarnessTest.java  FlinkHostChangelogIntoNativeTest.java  FlinkHotItemsSqlHarnessTest.java  FlinkIntervalJoinSqlHarnessTest.java  FlinkIsTrueSqlHarnessTest.java  FlinkLimitSqlHarnessTest.java  FlinkLookupJoinSqlHarnessTest.java  FlinkMemoryAccountingTest.java  FlinkMultiwayJoinSqlHarnessTest.java  FlinkOrcSourceSqlHarnessTest.java  FlinkOverAggregateSqlHarnessTest.java  FlinkParquetProjectionSqlHarnessTest.java  FlinkParquetSinkFallbackTest.java  FlinkParquetSinkS3IntegrationTest.java  FlinkParquetSinkSmokeTest.java  FlinkParquetSinkSqlHarnessTest.java  FlinkParquetSourceSqlHarnessTest.java  FlinkPartitionedParquetSinkSqlHarnessTest.java  FlinkRegexpExtractSqlHarnessTest.java  FlinkRegularJoinSqlHarnessTest.java  (+42 more)
src/test/proto/: row.proto
streamfusion-avro/: pom.xml
streamfusion-avro-confluent-registry/: pom.xml
streamfusion-core/: pom.xml
streamfusion-csv/: pom.xml
streamfusion-fluss/: pom.xml
streamfusion-image-it/: pom.xml
streamfusion-json/: pom.xml
streamfusion-kafka/: pom.xml
streamfusion-loader/: pom.xml
streamfusion-parquet/: pom.xml
streamfusion-protobuf/: pom.xml
streamfusion-raw/: pom.xml
streamfusion-runtime/: pom.xml
(+323 files in other folders)
