[package]
name = "streamfusion"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "streamfusion"
# rlib alongside cdylib so the benchmarks can link the engine directly (the JVM loads the cdylib).
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21"
arrow = { version = "58", features = ["ffi", "json", "csv"] }
# Custom timestamp formatting (DATE_FORMAT) with a translated strftime pattern. Already in the tree
# transitively via arrow; pinned here for direct use.
chrono = "0.4"
# REGEXP_EXTRACT (opt-in, allowIncompatible): Rust's regex engine differs from Java's, so the JVM
# encoder gates it. Already in the tree transitively via datafusion; pinned here for direct use.
regex = "1"
# Native file readers, both driven through DataFusion's file-scan execution (projection pushdown,
# row-group/stripe range selection) — datafusion's built-in Parquet source and datafusion-orc's ORC
# source. datafusion-orc is not published for this datafusion version, so it is pinned by git rev;
# orc-rust (published) is used directly only to read an ORC file's schema before building the scan.
datafusion-orc = { git = "https://github.com/datafusion-contrib/datafusion-orc.git", rev = "6c07fa282dc8d62db2aa4ded06ab55485efc811a" }
orc-rust = "0.8"
parquet = { version = "58", features = ["arrow"] }
# Native Avro decode incl. the Confluent Schema Registry wire format (magic byte + 4-byte schema id +
# Avro body), resolved against a local SchemaStore keyed by integer id. Used by the Kafka source.
arrow-avro = "58"
# Native Protobuf decode. Flink's `protobuf` format carries the BARE protobuf message bytes (no
# Confluent framing) decoded against a descriptor from a generated message class. `ptars` converts the
# protobuf wire format STRAIGHT into Arrow columnar arrays (no per-row DynamicMessage), driven by a
# runtime `MessageDescriptor` — exactly Flink's dynamic model. prost-reflect (pinned to ptars' 0.16)
# builds that descriptor from a FileDescriptorSet the JVM serializes off the message class.
prost-reflect = "0.16"
# Manipulate the FileDescriptorSet to prune it to the read fields (projection pushdown into the decode):
# match prost-reflect 0.16's prost (0.14) so the encoded set is interchangeable.
prost = "0.14"
prost-types = "0.14"
ptars = "0.0.18"
datafusion = "53.1.0"
# Native Kafka consumer, behind the `kafka` feature so the normal build pulls in no Kafka code at all.
# rdkafka-sys builds and statically links its bundled librdkafka (mklove build, needs only a C
# toolchain + make — no cmake, no system librdkafka, no pkg-config), so any dev who clones the repo
# can build it. The sync BaseConsumer is enough, so tokio is off; libz gives gzip-topic support
# without a system dependency. (SSL/SASL-GSSAPI for the Kerberos cluster would add the `ssl` +
# `gssapi-vendored` features — a heavier build, deferred until needed.)
rdkafka = { version = "0.36", default-features = false, features = ["libz-static"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
# Fast hashing for the per-row grouping map (the same hasher arrow/datafusion use internally).
ahash = "0.8"

[features]
# Opt-in: the native rdkafka consumer (statically links a bundled librdkafka — no system install).
# `kafka` builds the production split reader; `kafka-bench` additionally builds the throwaway
# whole-topic benchmark consumer.
kafka = ["dep:rdkafka"]
kafka-bench = ["kafka"]

# The engine is one large crate; the default parallel codegen-unit split severs cross-unit inlining
# at arbitrary points, so hot operator loops were measured swinging ~50% from unrelated code
# additions elsewhere in the crate. One codegen unit trades release-build time (tests build debug,
# unaffected) for stable, faster code — and benchmark numbers that reflect the change under test.
[profile.release]
codegen-units = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "operators"
harness = false
