[package]
name = "streamfusion"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "streamfusion"
# rlib alongside cdylib so the benchmarks can link the engine directly (the JVM loads the cdylib).
crate-type = ["cdylib", "rlib"]

[dependencies]
jni = "0.21"
arrow = { version = "58", features = ["ffi", "json", "csv"] }
# Custom timestamp formatting (DATE_FORMAT) with a translated strftime pattern. Already in the tree
# transitively via arrow; pinned here for direct use.
chrono = "0.4"
# Session-zone conversion for DATE_FORMAT/EXTRACT over TIMESTAMP_LTZ, opt-in behind allowIncompatible
# (the default LTZ path is a JVM upcall to Flink's own datetime code). chrono-tz bundles the IANA tz
# database; it can diverge from the JVM's tzdb at edges (version skew, >~2100 DST, deep history) — the
# reason it's gated. Same crate DataFusion Comet uses for Spark's zone-aware temporal functions.
chrono-tz = "0.10"
# REGEXP_EXTRACT (opt-in, allowIncompatible): Rust's regex engine differs from Java's, so the JVM
# encoder gates it. Already in the tree transitively via datafusion; pinned here for direct use.
regex = "1"
# Native file readers, both driven through DataFusion's file-scan execution (projection pushdown,
# row-group/stripe range selection) — datafusion's built-in Parquet source and datafusion-orc's ORC
# source. datafusion-orc is not published for this datafusion version, so it is pinned by git rev;
# orc-rust (published) is used directly only to read an ORC file's schema before building the scan.
datafusion-orc = { git = "https://github.com/datafusion-contrib/datafusion-orc.git", rev = "6c07fa282dc8d62db2aa4ded06ab55485efc811a" }
orc-rust = "0.8"
parquet = { version = "58", features = ["arrow"] }
# Native Avro decode incl. the Confluent Schema Registry wire format (magic byte + 4-byte schema id +
# Avro body), resolved against a local SchemaStore keyed by integer id. Used by the Kafka source.
arrow-avro = "58"
# Native Protobuf decode. Flink's `protobuf` format carries the BARE protobuf message bytes (no
# Confluent framing) decoded against a descriptor from a generated message class. `ptars` converts the
# protobuf wire format STRAIGHT into Arrow columnar arrays (no per-row DynamicMessage), driven by a
# runtime `MessageDescriptor` — exactly Flink's dynamic model. prost-reflect (pinned to ptars' 0.16)
# builds that descriptor from a FileDescriptorSet the JVM serializes off the message class.
prost-reflect = "0.16"
# Manipulate the FileDescriptorSet to prune it to the read fields (projection pushdown into the decode):
# match prost-reflect 0.16's prost (0.14) so the encoded set is interchangeable.
prost = "0.14"
prost-types = "0.14"
ptars = "0.0.18"
datafusion = "53.1.0"
# Native Kafka consumer, behind the `kafka` feature so the normal build pulls in no Kafka code at all.
# rdkafka-sys builds and statically links its bundled librdkafka (mklove build, needs only a C
# toolchain + make — no cmake, no system librdkafka, no pkg-config), so any dev who clones the repo
# can build it. The sync BaseConsumer is enough, so tokio is off; libz gives gzip-topic support
# without a system dependency. (SSL/SASL-GSSAPI for the Kerberos cluster would add the `ssl` +
# `gssapi-vendored` features — a heavier build, deferred until needed.)
rdkafka = { version = "0.36", default-features = false, features = ["libz-static"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
# Fast hashing for the per-row grouping map (the same hasher arrow/datafusion use internally).
ahash = "0.8"
# SIMD stage-1 JSON parse for the Kafka JSON/CDC decode: the tape walk into Arrow builders replaces
# arrow-json's scalar tokenizer on the hot ingest edge (RisingWave uses the same parser family).
# Runtime CPU detection on x86, NEON on aarch64 — nothing machine-specific in the build.
simd-json = "0.17"
# NumCast for the JSON number → Arrow primitive conversions, mirroring arrow-json's number path.
# Already in the tree transitively via arrow; pinned here for direct use.
num-traits = "0.2"
# Opt-in mimalloc (see the `mimalloc` feature): librdkafka allocates one op per consumed message
# on the broker thread and frees it on the app thread; the system allocator makes that cross-thread
# malloc/free pattern the top cost on both threads (macOS even madvises pages back mid-loop), and
# the changelog operators measurably churn the system allocator too.
libmimalloc-sys = { version = "0.1", optional = true }

[features]
# The native rdkafka consumer is a DEFAULT feature: it statically links a bundled librdkafka (mklove
# build — a C toolchain + make, no system install, portable for any dev who clones the repo), and
# since the source is the only Kafka path that regenerates a pushed-down watermark, a build without
# it loses acceleration for every watermarked (i.e. most real) Kafka table. Opt out with
# --no-default-features; the planner probes the build (`kafkaFeatureBuilt`) and falls back cleanly.
# `kafka-bench` additionally builds the throwaway whole-topic benchmark consumer.
default = ["kafka"]
kafka = ["dep:rdkafka"]
kafka-bench = ["kafka"]
# Rebind the C allocator to mimalloc for everything linked into THIS library (librdkafka included),
# via link-time symbol aliases emitted by build.rs. Library-scoped: the hosting JVM process keeps
# its own allocator, so this carries none of the risk of a process-wide malloc override (a zone-swap
# variant was tried and crashed under JVM thread churn — divergences/19). Pinned to the mimalloc v2
# branch: v3's lazy thread-init dereferences an uninitialized heap when a JVM-created thread's first
# allocation enters through the dylib (SIGSEGV in _mi_subproc under Flink task threads).
mimalloc = ["dep:libmimalloc-sys", "libmimalloc-sys/v2"]

# The engine is one large crate; the default parallel codegen-unit split severs cross-unit inlining
# at arbitrary points, so hot operator loops were measured swinging ~50% from unrelated code
# additions elsewhere in the crate. One codegen unit trades release-build time (tests build debug,
# unaffected) for stable, faster code — and benchmark numbers that reflect the change under test.
[profile.release]
codegen-units = 1

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "operators"
harness = false
